--- a/src/app/navbar/events/events.component.html
+++ b/src/app/navbar/events/events.component.html
@@ -36,8 +36,9 @@
     <div class="container-fluid pt-5">
         <span>
             <button type="button" class="btn btn-primary" style="height: 50px; width: 120px;">Active Events</button>
-            <button type="button" class="btn btn-outline-primary ml-5" style="height: 50px; width: 120px;" (click)="history()">History</button>
-        </span> 
+            <button type="button" class="btn btn-outline-primary ml-5" style="height: 50px; width: 120px;"
+                (click)="history()">History</button>
+        </span>
         <div class="table-responsive pt-5">
             <table class="table table-bordered">
                 <thead>
@@ -68,15 +69,17 @@
                         <td>0</td>
                         <td>01-7-2020</td>
                         <td>15-07-2020</td>
-                        <td> <button type="button" class="btn btn-info" (click)="requestStaff()">Click Here</button> </td>
+                        <td> <button type="button" class="btn btn-info" (click)="requestStaff()">Click Here</button>
+                        </td>
                         <td><button type="button" class="btn btn-info" (click)="depolyStaff()">Click Here</button></td>
                     </tr>
                 </tbody>
             </table>
         </div>
         <button type="button" class="btn btn-primary float-right"
-            style="margin-right: 50px; margin-top: 50px; border-radius: 30px; height: 50px; width: 120px;" (click)="onClick()">Okay</button>
-        <!-- <button type="button" class="btn btn-primary float-right"
-            style="margin-right: 50px; margin-top: 50px; border-radius: 30px; height: 50px; width: 120px;" ></button> -->
+            style="margin-right: 50px; margin-top: 50px; border-radius: 30px; height: 50px; width: 120px;"
+            (click)="onClick()">
+            Okay
+        </button>
     </div>
 </section>
