--- a/src/app/navbar/reports/reports.component.html
+++ b/src/app/navbar/reports/reports.component.html
@@ -25,7 +25,8 @@
                 <a class="nav-link" href="../alerts/"><b>Alerts</b></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="../reports/" style="background-color: #4A53E1; color: white;"><b>Reports</b></a>
+                <a class="nav-link" href="../reports/"
+                    style="background-color: #4A53E1; color: white;"><b>Reports</b></a>
             </li>
         </ul>
     </div>
@@ -69,8 +70,8 @@
             </table>
         </div>
         <button type="button" class="btn btn-primary float-right"
-            style="margin-right: 50px; margin-top: 50px; border-radius: 30px; height: 50px; width: 120px;">Okay</button>
-        <!-- <button type="button" class="btn btn-primary float-right"
-            style="margin-right: 50px; margin-top: 50px; border-radius: 30px; height: 50px; width: 120px;" ></button> -->
+            style="margin-right: 50px; margin-top: 50px; border-radius: 30px; height: 50px; width: 120px;">
+            Okay
+        </button>
     </div>
 </section>
