--- a/src/app/organize-staff/preview/preview.component.html
+++ b/src/app/organize-staff/preview/preview.component.html
@@ -1,31 +1,4 @@
-<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <img src="../../../assets/images/logo1.png">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="../home/"><b>Home</b><span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="../create-bundobust/"><b>Create Bundobust</b></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="../events/"><b>Events</b></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="../view-staff-details/"><b>View Staff Details</b></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="../other-staff/"><b>Other Staff</b></a>
-            </li>
-        </ul>
-    </div>
-</nav> -->
-
-<div class="container pt-5"> 
+<div class="container pt-5">
     <h1 class="text-center mt-3 pb-4"><b>Preview</b></h1>
     <div class="table-responsive">
         <h2><b>Bundobust</b></h2>
@@ -197,7 +170,8 @@
             </tbody>
         </table>
     </div>
-    <button type="submit" class="btn btn-outline-primary mt-3 mb-4" style="margin-left: 500px; border-radius: 20px;" data-toggle="modal" data-target="#submit">Submit</button>
+    <button type="submit" class="btn btn-outline-primary mt-3 mb-4" style="margin-left: 500px; border-radius: 20px;"
+        data-toggle="modal" data-target="#submit">Submit</button>
 </div>
 
 <div class="modal fade" id="submit">
