--- a/src/app/view-profile/view-profile.component.html
+++ b/src/app/view-profile/view-profile.component.html
@@ -1,51 +1,3 @@
-<!-- <section class="main">
-    <div class="container pt-5">
-        <div class="row">
-            <div class="col-md-4">
-                <div class="card" style="width: 400px;">
-                    <h4 class="text-center pt-2 pb-2">Professional Details</h4>
-                    <img src="../../assets/images/policeImg.jpg" style="height: 280px; width: 398px;">
-                    <div class="row">
-                        <div class="col-md-4">
-                            <h6>Name</h6>
-                        </div>
-                        <div class="col-md-6">
-                            <p>John Doe</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-4">
-                            <h6>Designation</h6>
-                        </div>
-                        <div class="col-md-6">
-                            <p>CI</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-4">
-                            <h6>Age</h6>
-                        </div>
-                        <div class="col-md-6">
-                            <p>46</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-4">
-                            <h6>Email</h6>
-                        </div>
-                        <div class="col-md-6">
-                            <p>police@gmail.com</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-7"></div>
-        </div>
-    </div>
-</section> -->
-
-
-
 <section class="main">
     <div class="container pt-5">
         <div class="card">
@@ -83,7 +35,8 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="card" style="width: 538px;">
-                    <h3>Personal Skills</h3><hr>
+                    <h3>Personal Skills</h3>
+                    <hr>
                     <div class="row pt-2 pl-4">
                         <div class="col-md-6">
                             <p>L & O Skills</p>
@@ -128,7 +81,8 @@
             </div>
             <div class="col-md-6">
                 <div class="card" style="width: 538px;">
-                    <h3>Posting Information</h3><hr>
+                    <h3>Posting Information</h3>
+                    <hr>
                     <div class="row pt-2 pl-4">
                         <div class="col-md-6">
                             <p>L & O Skills</p>
@@ -178,7 +132,8 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="card" style="width: 538;">
-                    <h3>Banking Details</h3><hr>
+                    <h3>Banking Details</h3>
+                    <hr>
                     <div class="row pt-2 pl-4">
                         <div class="col-md-6">
                             <p>L & O Skills</p>
@@ -223,7 +178,8 @@
             </div>
             <div class="col-md-6">
                 <div class="card" style="width: 538;">
-                    <h3>Address for correspondence</h3><hr>
+                    <h3>Address for correspondence</h3>
+                    <hr>
                     <div class="row pt-2 pl-4">
                         <div class="col-md-6">
                             <p>L & O Skills</p>
@@ -273,7 +229,8 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="card" style="width: 538;">
-                    <h3>Health Profile</h3><hr>
+                    <h3>Health Profile</h3>
+                    <hr>
                     <div class="row pt-2 pl-4">
                         <div class="col-md-6">
                             <p>L & O Skills</p>
