--- a/src/app/navbar/home/home.component.html
+++ b/src/app/navbar/home/home.component.html
@@ -35,7 +35,6 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-4 police">
-                <!-- <img src="../../../assets/images/Octopus_Telangana.jpg" width="500px" height="500px" alt="police"> -->
                 <img src="../../../assets/images/Charminar_Police.jpg" width="550px" height="550px" alt="police">
 
             </div>
@@ -45,19 +44,19 @@
                 <div class="row">
                     <div class="col-md-4">
                         <span>
-                            <button type="btn" class="btn btn-primary" style="margin-left: 150px;" (click)="create()"><h5>Create Profile</h5></button>
-                            <!-- <button type="btn" class="btn btn-primary" style="margin-left: 100px;" (click)="onClick()">Create Bundobust</button> -->
+                            <button type="btn" class="btn btn-primary" style="margin-left: 150px;" (click)="create()">
+                                <h5>Create Profile</h5>
+                            </button>
                         </span>
                     </div>
                     <div class="col-md-4">
                         <span>
-                            <!-- <button type="btn" class="btn btn-primary" (click)="create()">Create Account</button> -->
-                            <button type="btn" class="btn btn-primary" style="margin-left: 0px;" (click)="onClick()"><h6>Create Bundobust</h6></button>
+                            <button type="btn" class="btn btn-primary" style="margin-left: 0px;" (click)="onClick()">
+                                <h6>Create Bundobust</h6>
+                            </button>
                         </span>
                     </div>
                 </div>
-                
-                
             </div>
         </div>
     </div>
