--- a/src/app/navbar/view-staff-details/view-staff-details.component.html
+++ b/src/app/navbar/view-staff-details/view-staff-details.component.html
@@ -10,7 +10,8 @@
                 <a class="nav-link" href="../home/"><b>Home</b></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="../view-staff-details/" style="background-color: #4A53E1; color: white;"><b>My Staff</b></a>
+                <a class="nav-link" href="../view-staff-details/" style="background-color: #4A53E1; color: white;"><b>My
+                        Staff</b></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="../other-staff/"><b>Out Staff</b></a>
@@ -68,7 +69,7 @@
 
 
                     <td>
-                        <p>01</p> 
+                        <p>01</p>
                     </td>
 
                     <td>
@@ -92,8 +93,6 @@
                     </td>
                     <td>
                         <p>Avaliable</p>
-                        <!-- <p>Unavaliable</p> -->
-                        <!-- <button type="button" class="btn btn-info">Avaliable</button> -->
                     </td>
                     <td>
                         <button type="button" class="btn btn-info" (click)="view()">View</button>
@@ -116,7 +115,7 @@
 
 
                     <td>
-                        <p>01</p> 
+                        <p>01</p>
                     </td>
 
                     <td>
