--- a/src/app/organize-staff/organize-staff.component.html
+++ b/src/app/organize-staff/organize-staff.component.html
@@ -1,30 +1,3 @@
-<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <img src="../../../assets/images/logo1.png">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="../home/"><b>Home</b><span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="../create-bundobust/"><b>Create Bundobust</b></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="../events/"><b>Events</b></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="../view-staff-details/"><b>View Staff Details</b></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="../other-staff/"><b>Other Staff</b></a>
-            </li>
-        </ul>
-    </div>
-</nav> -->
-
 <div class="sidenav">
     <a href="../circle/" class="personal pt-5">Within Circle</a>
     <a href="../sdpo/">Within SDPO</a>
@@ -128,7 +101,8 @@
                     <td>
                         <p>9996669988</p>
                     </td>
-                    <td><button type="button" class="btn btn-info" style="width: 130px;" (click)="duty()">Duty Ticket</button></td>
+                    <td><button type="button" class="btn btn-info" style="width: 130px;" (click)="duty()">Duty
+                            Ticket</button></td>
                 </tr>
             </tbody>
         </table>
